--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <link href="bootstrap.css" rel="stylesheet" type="text/css">
 <link href="pattern.css" rel="stylesheet" type="text/css">
-<link href="app-copy.css" rel="stylesheet" type="text/css">
+<link href="app.css" rel="stylesheet" type="text/css">
 <link href="code.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="css/holistic.css">
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
@@ -9,11 +9,11 @@
 </head>
 <body>
 	<section class="hero">
-			<div class="container-fluid">
-				<div class="col-md-12">
-					<img class="logo" src="http://www.eysys.com/assets/images/eysys_logo.png">
-				</div>	
-			</div>
+		<div class="container-fluid">
+			<div class="col-md-12">
+				<img class="logo" src="http://www.eysys.com/assets/images/eysys_logo.png">
+			</div>	
+		</div>
 		<h1> Front end developer Pattern library </h1>
 	</section>
 
@@ -196,9 +196,6 @@
 				<pre><code><span class="tag">&lt;<span class="title">i</span> <span class="attribute">class</span>=<span class="value">"icon-search"</span>&gt;<span>&lt;/<span class="title">i</span>&gt;</span></code> </pre>
 
 			</div>
-
-
-
 		</div>
 	</section>
 
@@ -217,7 +214,6 @@
 					<a class="btn btn-large primary" href=""><i class="icon-plus"></i> new </a>
 
 					<pre><code><span class="tag">&lt;<span class="title">a</span> <span class="attribute">class</span>=<span class="value">"btn btn-large primary"</span> <span class="attribute">href</span>=<span class="value">"/"</span>&gt;</span> <span class="tag">&lt;<span class="title">i</span> <span class="attribute">class</span>=<span class="value">"icon-plus"</span>&gt;<span>&lt;/<span class="title">i</span>&gt;</span> new <span class="tag">&lt;/<span class="title">a</span>&gt;</span></code> </pre>
-
 				</div>
 
 				<div class="col-md-6">
@@ -226,7 +222,6 @@
 					<a class="btn primary" href=""><i class="icon-plus"></i> </a>
 
 					<pre><code><span class="tag">&lt;<span class="title">a</span> <span class="attribute">class</span>=<span class="value">"btn primary"</span> <span class="attribute">href</span>=<span class="value">"/"</span>&gt;</span> <span class="tag">&lt;<span class="title">i</span> <span class="attribute">class</span>=<span class="value">"icon-plus"</span>&gt;<span>&lt;/<span class="title">i</span>&gt;</span> <span class="tag">&lt;/<span class="title">a</span>&gt;</span></code> </pre>
-
 				</div>
 			</div>
 
