--- a/settings_temp.html
+++ b/settings_temp.html
@@ -14,60 +14,58 @@
 			<a href="/" id="notification"> <i class="icon-notification"> </i> </a>
 			<h3> Morning jordan </h3>
 		</div>
-	<ul>
-		<li class="dashboard">
-			<a class="active" href="/"> <i class="icon-dashboard module dashboard"> </i> <span> Dashboard </span> </a>
-		</li>
-		<li class="organise">
-			<a href="/"> <i class="icon-organise module organise"> </i> <span> Organise </span> </a>
-		</li>
-		<li class="monetise">
-			<a href="/"> <i class="icon-monetise module monetise"> </i> <span> Monetise </span> </a>
-		</li>
-		<li class="products">
-			<a href="/"> <i class="icon-products module products"> </i> <span> Products </span></a>
-		</li>
-		<li class="personalise">
-			<a href="/"> <i class="icon-personalise module personalise"> </i> <span> Personalise </span> </a>
-		</li>
-		<li class="searchendise">
-			<a href="/"> <i class="icon-search module searchendise"> </i> <span> Searchendise </span></a>
-		</li>
-		<li class="nav-controller">
-			<a id="nav-button"> <i class="icon-arrow"> </i> Close nav </a>
-		</li>
-	</ul>
+		<ul>
+			<li class="dashboard">
+				<a class="active" href="/"> <i class="icon-dashboard module dashboard"> </i> <span> Dashboard </span> </a>
+			</li>
+			<li class="organise">
+				<a href="/"> <i class="icon-organise module organise"> </i> <span> Organise </span> </a>
+			</li>
+			<li class="monetise">
+				<a href="/"> <i class="icon-monetise module monetise"> </i> <span> Monetise </span> </a>
+			</li>
+			<li class="products">
+				<a href="/"> <i class="icon-products module products"> </i> <span> Products </span></a>
+			</li>
+			<li class="personalise">
+				<a href="/"> <i class="icon-personalise module personalise"> </i> <span> Personalise </span> </a>
+			</li>
+			<li class="searchendise">
+				<a href="/"> <i class="icon-search module searchendise"> </i> <span> Searchendise </span></a>
+			</li>
+			<li class="nav-controller">
+				<a id="nav-button"> <i class="icon-arrow"> </i> Close nav </a>
+			</li>
+		</ul>
+	</nav>
 
-	</div>
-</nav>
-
-<div class="viewport dashboard-module">
-	<div class="left">
-				<div class="list">
-					<header>
-						<h2> Users </h2>
-						<div class="buttons">
-							<div class="actions">
-								<a class="btn secondary" href=""><i class="icon-search"></i> </a>
+	<div class="viewport dashboard-module">
+		<div class="left">
+			<div class="list">
+				<header>
+					<h2> Users </h2>
+					<div class="buttons">
+						<div class="actions">
+							<a class="btn secondary" href=""><i class="icon-search"></i> </a>
+						</div>
+					</div>
+					<div class="add-new buttons">
+						<a class="btn btn-large primary" href=""><i class="icon-add"></i> new </a>
+					</div>
+				</header>
+				<ul class="user-list">
+					<li>
+						<img class="avatar" src="images/avatar.png" width="60" height="60">
+						<div class="content">
+							<span class="username"> Jordan Amblin </span>
+							<span class="email"> jordan.amblin@eysys.com </span>
+							<div class="access">
+								<i class="icon-dashboard-rd dashboard"> </i> 
+								<i class="icon-personalise-rd personalise"> </i> </span>
 							</div>
 						</div>
-						<div class="add-new buttons">
-							<a class="btn btn-large primary" href=""><i class="icon-add"></i> new </a>
-						</div>
-					</header>
-					<ul class="user-list">
-						<li>
-							<img class="avatar" src="images/avatar.png" width="60" height="60">
-							<div class="content">
-								<span class="username"> Jordan Amblin </span>
-								<span class="email"> jordan.amblin@eysys.com </span>
-								<div class="access">
-									<i class="icon-dashboard-rd dashboard"> </i> 
-									<i class="icon-personalise-rd personalise"> </i> </span>
-								</div>
-							</div>
-							<span class="tag"> User </span>
-						</li>
+						<span class="tag"> User </span>
+					</li>
 						<li>
 							<img class="avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/gt/128.jpg" width="60" height="60">
 							<div class="content">
@@ -86,9 +84,9 @@
 						</li>
 					</ul>
 				</div>
-	</div>
+			</div>
 
-	<div class="right">
+			<div class="right">
 				<div class="list">
 					<header>
 						<h2> Add new user </h2>
@@ -102,7 +100,7 @@
 					<ul class="form-list">
 						<label> <span> Full name </span> <input class="text error" type="text" name="fullname" /> </label>
 						<label> <span> Email </span> <input class="text" type="text" name="email" /> </label>
-						<label> <span> Add user as </span>
+						<label> <span> Add user as </span> </label>
 							<div class="push">
 								<input type="radio" name="option"> Admin
 								<input type="radio" name="option"> User
@@ -119,5 +117,7 @@
 						</label>
 					</ul>
 				</div>
+			</div>
+		</div>
 	</div>
-
+</body>
